# fkstream

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  dataset.json  docker-compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml  dockerbuild.yml  kodi-repository.yml
fkstream/: main.py
fkstream/api/: configure.py  core.py  general.py  kodi.py  stream.py  stremio.py
fkstream/debrid/: alldebrid.py  debridlink.py  easydebrid.py  manager.py  offcloud.py  pikpak.py  premiumize.py  realdebrid.py  stremthru.py  torbox.py
fkstream/scrapers/: fankai.py  nyaa.py  nyaa_matcher.py  videas.py
fkstream/templates/: index.html
fkstream/utils/: base_client.py  config_validator.py  custom_sources.py  database.py  dependencies.py  general.py  http_client.py  http_constants.py  logger.py  magnet_store.py  models.py  rate_limiter.py  size_utils.py  stream_utils.py
kodi/: README.md  build.py  index.html.template
kodi/plugin.video.fkstream/: addon.xml  main.py
kodi/plugin.video.fkstream/lib/: custom_settings_window.py  router.py  utils.py
kodi/plugin.video.fkstream/resources/: settings.xml
kodi/repository.fkstream/: addon.xml
scripts/: EXPLICATIONS.md  add_custom_source.bat  add_custom_source.sh
