[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fkstream"
version = "1.1.0"
description = "FKStream – Addon non officiel pour accéder au contenu de Fankai"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite",
    "asyncpg",
    "beautifulsoup4",
    "bencode-py",
    "databases",
    "fastapi",
    "gunicorn",
    "jinja2",
    "loguru",
    "orjson",
    "pydantic-settings",
    "rank-torrent-name==1.8.3",
    "uvicorn",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fkstream*"]
